# docx

./: filled_contract.docx  main.py  pyproject.toml
